--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -9,6 +9,46 @@
     <script src="../js/footer"></script>
 </head>
 <body>
+<div class="link">
+    <div class="contain clearfix">
+            <dl>
+                <dt>新手指南</dt>
+                <dd><a href="#">常见问题</a></dd>
+                <dd><a href="#">会员权益</a></dd>
+                <dd><a href="#">购买流程</a></dd>
+                <dd><a href="#">如何购买</a></dd>
+            </dl>
+            <dl>
+                <dt>配送方式</dt>
+                <dd><a href="#">配送预约</a></dd>
+                <dd><a href="#">快递运输</a></dd>
+                <dd><a href="#">三九快递</a></dd>
+                <dd><a href="#">全省包邮服务</a></dd>
+            </dl>
+            <dl>
+                <dt>支付方式</dt>
+                <dd><a href="#">银行汇款</a></dd>
+                <dd><a href="#">网上支付</a></dd>
+                <dd><a href="#">货到付款</a></dd>
+                <dd><a href="#">刷卡服务</a></dd>
+            </dl>
+            <dl>
+                <dt>售后服务</dt>
+                <dd><a href="#">服务承诺</a></dd>
+                <dd><a href="#">退换货流程</a></dd>
+                <dd><a href="#">售后质保</a></dd>
+                <dd><a href="#">品质流程</a></dd>
+            </dl>
+
+            <div class="fr">
+                <img src="http://localhost:1230/img/phone_bg.png" height="66" width="240" alt="" />
+                <p>0871- <strong>65885399</strong><br />或 &nbsp;&nbsp;&nbsp;<strong>400-920-5239</strong><br /><i>400-就爱您-我爱上九</i><br /></p>
+                <span>请为我们提供您宝贵的意见及建议</span>
+                <input type="button" value="在线投诉及建议"/>
+                <h3>工作时间：09:00-21:00</h3>
+            </div>
+        </div>
+</div>
 <div class="footer0">
      <div class="footer">
         <div class="ul">
@@ -185,6 +225,6 @@
         返回顶部
     </div>
 </div>
-   
+
 </body>
 </html>
