--- a/src/html/header.html
+++ b/src/html/header.html
@@ -8,7 +8,7 @@
     <div class="header">
         <div class="header1">
             <div class="contain clearfix">
-                <h3><i>九芽妈妈网 -</i> 云南母婴O2O实力派 <a href="./html/login.html">登录</a> <a href="./html/reg.html">免费注册</a></h3>
+                <h3><i>九芽妈妈网 -</i> 云南母婴O2O实力派 <a href="http://localhost:1230/html/login.html">登录</a> <a href="http://localhost:1230/html/reg.html">免费注册</a></h3>
 
                 <ul class="clearfix">
                     <li><a href="#" title="个人中心">个人中心</a></li>
@@ -25,7 +25,7 @@
             <div class="contain">
                 <a href="#" class="act"><img src="http://localhost:1230/img/201712280246590.jpg" height="70" width="1200" alt="" /></a>
                 <div class="search  clearfix">
-                    <a href="#" class="logo"><img src="http://localhost:1230/img/reg_logo.gif"/></a>
+                    <a href="http://localhost:1230/index.html" class="logo"><img src="http://localhost:1230/img/reg_logo.gif"/></a>
                     <div class="mid clearfix">
                         <input type="text" placeholder="奶粉"/><button>搜索</button>
                         <p>热门搜索：
@@ -47,10 +47,21 @@
         </div>
         <div class="nav3">
             <div class="contain clearfix">
-                <div class="fenlei">我是商品分类</div>
+                <div class="two">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </div>
+                <div class="three">我是商品分类三级</div>
                 <div class="all_nav">商品分类</div>
                 <ul class="ul_nav clearfix">
-                    <li><a href="#" title="首页" >首页</a></li>    
+                    <li><a href="http://localhost:1230/index.html" title="首页" >首页</a></li>    
                     <li class="new_shows"><a href="#" title="首页"><span>逛</span><span>新</span><span>品</span></a></li>
                     <li><a href="#" title="美妆日化">美妆日化</a></li>
                     <li><a href="#" title="满额赠品">满额赠品</a></li>
@@ -59,7 +70,7 @@
                     <li><a href="#" title="跨境购">跨境购</a></li>
                     <li><a href="#" title="群婴荟">群婴荟</a></li>
                 </ul>
-                <div id="cart">购物车<i>0</i></div>
+                <div id="cart"><a href="http://localhost:1230/html/cart.html">购物车<i>0</i></a></div>
             </div>
         </div>
     </div>
