--- a/src/html/login.html
+++ b/src/html/login.html
@@ -26,7 +26,7 @@
 
             <div class="r fr">
                 <h3>
-                    登录妈咪网<span>还没有妈咪网账号？<a href="./login.html">30秒注册</a></span>
+                    登录妈咪网<span>还没有妈咪网账号？<a href="./reg.html">30秒注册</a></span>
                 </h3>
 
                 <form class="form-inline">
