页面跳转，详情页

--- a/src/18放大镜插件.html
+++ b/src/18放大镜插件.html
@@ -7,10 +7,10 @@
 	<style>
 		/*body{padding-left:600px;}*/
 		.smallList img{width:80px;}
-		.gds-zoom-big img{min-width: 1366px;}
+		.gds-zoom-big img{min-width: 1000px;}
 	</style>
 	<script src="lib/jquery-3.2.1.js"></script>
-	<script src="lib/jquery-gdsZoom/jquery.gdsZoom2.js"></script>
+	<script src="lib/jquery-gdsZoom/jquery.gdsZoom.js"></script>
 	<script>
 		$(function(){
 			$('.goods').gdsZoom();
