--- a/src/html/header.html
+++ b/src/html/header.html
@@ -27,7 +27,7 @@
                 <div class="search  clearfix">
                     <a href="http://localhost:1230/index.html" class="logo"><img src="http://localhost:1230/img/reg_logo.gif"/></a>
                     <div class="mid clearfix">
-                        <input type="text" placeholder="奶粉"/><button>搜索</button>
+                        <input type="text" placeholder="奶粉"/><button id="search">搜索</button>
                         <p>热门搜索：
                             <a href="#">花王</a>
                             <a href="#">爱荷美</a>
@@ -48,15 +48,14 @@
         <div class="nav3">
             <div class="contain clearfix">
                 <div class="two">
+                    <!-- <li></li>
                     <li></li>
                     <li></li>
                     <li></li>
                     <li></li>
                     <li></li>
                     <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li></li> -->
                 </div>
                 <div class="three">我是商品分类三级</div>
                 <div class="all_nav">商品分类</div>
