--- a/src/html/login.html
+++ b/src/html/login.html
@@ -15,7 +15,7 @@
 <body>
     <div class="header">
         <div class="container2">
-            <a href="#"><img src="../img/reg_logo.gif"/></a>
+            <a href="../index.html"><img src="../img/reg_logo.gif"/></a>
             <img src="../img/severs.jpg" height="79" width="424" alt="" class="fr"/>
         </div>
     </div>
@@ -36,7 +36,7 @@
                   </div>
                   <div class="form-group">
                     <label for="password"></label>
-                    <input type="email" class="form-control" id="password" placeholder="密码">
+                    <input type="password" class="form-control" id="password" placeholder="密码">
                   </div>
                   
                     <div class="checkbox">
