--- a/src/html/reg.html
+++ b/src/html/reg.html
@@ -17,7 +17,7 @@
 <body>
     <div class="header">
         <div class="container2">
-            <a href="#"><img src="../img/reg_logo.gif"/></a>
+            <a href="../index.html"><img src="../img/reg_logo.gif"/></a>
             <img src="../img/severs.jpg" height="79" width="424" alt="" class="fr"/>
         </div>
     </div>
@@ -40,6 +40,7 @@
                   <div class="form-group">
                     <label for="password"></label>
                     <input type="email" class="form-control" id="password" placeholder="密码">
+
                   </div>
                   <div class="form-group">
                     <label for="password2"></label>
@@ -55,7 +56,7 @@
                   <div class="form-group">
                     <label for="yzm2"></label>
                     <input type="email" class="form-control yzm" id="yzm2" placeholder="手机验证码">
-                    <input type="button" value="免费获取验证码" class="btn btn-default"/>
+                    <input type="button" value="免费获取验证码" class="btn btn-default" id="yzm2_btn"/>
                   </div>
                     <div class="checkbox">
                         <label>
