--- a/src/html/deta_list.html
+++ b/src/html/deta_list.html
@@ -5,15 +5,16 @@
     <title>deta_list</title>
     <link rel="stylesheet" type="text/css" href="../css/base.css" />
     <link rel="stylesheet" type="text/css" href="../lib/jquery.Carousel/jquery.Carousel.css" />
+    <link rel="stylesheet" type="text/css" href="../lib/jquery-gdsZoom/jquery.gdsZoom.css" />
     <link rel="stylesheet" type="text/css" href="../css/footer.css" />
     <link rel="stylesheet" type="text/css" href="../css/header.css" />
     <link rel="stylesheet" type="text/css" href="../css/deta_list.css" />
-    <script src="../lib/jquery-3.2.1.js"></script>
+    <!-- <script src="../lib/jquery-3.2.1.js"></script>
     <script src="../lib/jquery.Carousel/jquery.Carousel.js"></script>
-
+    <script src="../lib/jquery-gdsZoom/jquery.gdsZoom.js"></script>
     <script src="../js/footer.js"></script>
     <script src="../js/header.js"></script>
-    <script src="../js/deta_list.js"></script>
+    <script src="../js/deta_list.js"></script> -->
 </head>
 <body>
     <div id="header"></div>
@@ -246,5 +247,6 @@
     </div>
     <div id="link"></div>
     <div id="footer"></div>
+    <script src="../js/require.js" data-main="../js/deta_list"></script>
 </body>
 </html>
