--- a/src/html/header.html
+++ b/src/html/header.html
@@ -69,7 +69,7 @@
                     <li><a href="#" title="跨境购">跨境购</a></li>
                     <li><a href="#" title="群婴荟">群婴荟</a></li>
                 </ul>
-                <div id="cart"><a href="http://localhost:1230/html/cart.html">购物车<i>0</i></a></div>
+                <div id="cart"><a>购物车<i>0</i></a></div>
             </div>
         </div>
     </div>
