--- a/src/html/goods_list.html
+++ b/src/html/goods_list.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" type="text/css" href="../lib/jquery.Carousel/jquery.Carousel.css" />
     <link rel="stylesheet" type="text/css" href="../css/footer.css" />
     <link rel="stylesheet" type="text/css" href="../css/header.css" />
-    <script src="../lib/jquery-3.2.1.js"></script>
+    <!-- <script src="../lib/jquery-3.2.1.js"></script>
     <script src="../lib/jquery.Carousel/jquery.Carousel.js"></script>
     <script src="../js/footer.js"></script>
     <script src="../js/header.js"></script>
-    <script src="../js/goods_list.js"></script>
+    <script src="../js/goods_list.js"></script> -->
 </head>
 <body>
     <div id="header"></div>
@@ -295,11 +295,15 @@
                         </li>
                         
                     </ul>
+                    <div id="page">
+                        
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <div id="link"></div>
     <div id="footer"></div>
+    <script src="../js/require.js" data-main="../js/goods_list"></script>
 </body>
 </html>
