--- a/src/html/login.html
+++ b/src/html/login.html
@@ -29,7 +29,7 @@
                     登录妈咪网<span>还没有妈咪网账号？<a href="./reg.html">30秒注册</a></span>
                 </h3>
 
-                <form class="form-inline">
+                <div class="form-inline">
                   <div class="form-group">
                     <label for="username"></label>
                     <input type="text" class="form-control" id="username" placeholder="邮箱/用户名/手机">
@@ -45,7 +45,7 @@
                         </label>
                     </div>
                   <button type="submit" class="btn btn-default reg">登录</button>
-                </form>
+                </div>
 
                 <div class="hz">
                     <p>使用其它合作网站账号登录：</p>
