--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" type="text/css" href="./css/footer.css" />
     <link rel="stylesheet" type="text/css" href="./css/header.css" />
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
-    <script src="./lib/jquery-3.2.1.js"></script>
+    <!-- <script src="./lib/jquery-3.2.1.js"></script>
     <script src="./lib/jquery.Carousel/jquery.Carousel.js"></script>
     <script src="./lib/stair.js"></script>
     <script src="./js/footer.js"></script>
     <script src="./js/header.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/index.js"></script> -->
 </head>
 <body>
     <div id="header"></div>
@@ -2617,5 +2617,13 @@
             </h3>
         </div>
     </div>
+    <script src="./js/require.js" data-main="./js/index"></script>
 </body>
 </html>
+
+<!-- require(['config'],function(){
+    require(['jquery','carousel','stair','header','footer'],function($,c){
+        
+    })
+})
+ -->
